subiendo modificaciones de archivos index css y readme

--- a/index.html
+++ b/index.html
@@ -1,1 +1,139 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Freelancer</title>
+	<!-- Enlace con CSS -->
+	<link rel="stylesheet" href="css/main.css">
+	<!-- Estilo de tipografia -->
+	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:700" rel="stylesheet">
+</head>
+<body>
+<!-- Enlace para iconos -->
+<script src="https://use.fontawesome.com/53a473cc15.js"></script>
+<header><!-- Encabezado -->
+	<div class="menu">
+		<ul>
+			<li class="m1"><h2>START BOOTSTRAP</h2></li>
+			<lI class="m2">PORTFOLIO</lI>
+			<lI class="m3">ABOUT</lI>
+			<lI class="m4">CONTACT</lI>
+		</ul>
+	</div>
+</header>
+<!-- Primera seccion -->
+<section class="menu2">
+	<div class="m5">
+		<h1><strong>START BOOTSTRAP</strong></h1>
+		<div class="profile1">
+		<!-- Imagen principal -->
+		<div><img src="assets/images/profile.png"></div>
+		</div>
+		<div class="star"><!-- Logo de estrella -->
+			<i class="fa fa-star" aria-hidden="true"></i>
+		</div>
+		<div class="raya1"></div>
+		<div class="raya2"></div>
+		<div class="opciones">Web Developer - Graphic Artist - User Experience Designer</div>
+	</div>
+</section>
+<!-- Segunda seccion -->
+<section class="menu3">
+	<div class="m6">
+		<h2><strong>PORTFOLIO</strong></h2>
+		<div class="star2"><!-- Logo de estrella -->
+			<i class="fa fa-star" aria-hidden="true"></i>
+		</div>
+		<div class="raya3"></div>
+		<div class="raya4"></div>
+	</div>
+	<!-- Imagenes principales -->
+	<div class="pic"><img src="assets/images/portfolio/cabin.png"></div>
+	<div class="pic"><img src="assets/images/portfolio/cake.png"></div>
+	<div class="pic"><img src="assets/images/portfolio/circus.png"></div>
+	<div class="pic"><img src="assets/images/portfolio/game.png"></div>
+	<div class="pic"><img src="assets/images/portfolio/safe.png"></div>
+	<div class="pic"><img src="assets/images/portfolio/submarine.png"></div>
+</section>
+<!-- Tercera seccion -->
+<section class="menu4">
+	<div class="m7">
+		<h2><strong>ABOUT</strong></h2>
+		<div class="star3"><!-- Logo de estrella -->
+			<i class="fa fa-star" aria-hidden="true"></i>
+		</div>
+		<div class="raya5"></div>
+		<div class="raya6"></div>
+	</div>
+	<!-- Primera columna -->
+	<div class="text1">
+	<div style="float: left; width: 45%">  
+    Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
+  	</div>
+	</div>
+	<!-- Segunda columna -->
+	<div class="text2">
+  	<div style="float: right; width: 45%">
+    Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
+  	</div>
+  	</div>
+
+  <div style="clear: both"></div>
+
+  <div class="download">
+  	<i class="fa fa-download" aria-hidden="true"></i>
+  </div>
+  	
+  	<div class="m8" >Download Theme</div>
+</section>
+<!-- Cuarta seccion -->
+<section class="menu5">
+	<div class="m9">
+		<h2><strong>CONTACT ME</strong></h2>
+		<div class="star4"><!-- Logo de estrella -->
+			<i class="fa fa-star" aria-hidden="true"></i>
+		</div>
+		<div class="raya7"></div>
+		<div class="raya8"></div>
+<!-- Formulario -->
+<div class="datos">
+<div class="name">Name</div>
+<hr align="left" size="1" width="80%" color="#EEEEEE"/>
+<div class="mail">Email Address</div>
+<hr align="left" size="1" width="80%" color="#EEEEEE"/>
+<div class="phone">Phone Number</div>
+<hr align="left" size="1" width="80%" color="#EEEEEE"/>
+<div class="message">Message</div>
+<hr align="left" size="1" width="80%" color="#EEEEEE"/>
+</div>
+
+<div class="enviar"><strong>Send</strong></div>
+</section>
+<!-- Quinta seccion -->
+<section class="menu6">
+<div class="end1">
+		<ul>
+			<li class="loc">LOCATION</li>
+			<lI class="web">AROUND THE WEB</lI>
+			<lI class="af">ABOUT FREELANCER</lI>
+		</ul>
+	</div>
+<div class="end2">
+	<ul>
+		<li class="e1">3481 Melrose Place
+Beverly Hills, CA 90210</li>
+		<!-- Iconos finales -->
+		<div class="icons">
+		<li class="e2"><i class="fa fa-facebook" aria-hidden="true"></i></li>
+		<li class="e3"><i class="fa fa-google-plus" aria-hidden="true"></i></li>
+		<li class="e4"><i class="fa fa-twitter" aria-hidden="true"></i></li>
+		<li class="e5"><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+		<li class="e6"><i class="fa fa-dribbble" aria-hidden="true"></i></li>
+		</div>
+		<li class="e7">Freelance is a free to use, open source Bootstrap theme created by <a href=""><strong>Start Bootstrap</strong>.</li></a>
+		<li class="fin">Copyright © Your Website 2017</li>
+	</ul>
+</div>
+</section>
+</body>
+</html>
